--- a/Villa_WEB/Views/Home/Index.cshtml
+++ b/Villa_WEB/Views/Home/Index.cshtml
@@ -1,8 +1,46 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<Villa_WEB.Models.Dto.VillaDTO>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<img class="d-block w-100"
+     src="https://dmaevvtdousx6.cloudfront.net/uploads/2022/03/Hero_2.jpg">
+</img>
+
+
+<div class="row" style="--bs-gutter-x:0">
+    @foreach (var villa in Model)
+    {
+        <div class="p-4 col-md-12 col-lg-6">
+            <div class="row" style="border-radius:20px; border: 1px solid #ffffff">
+                <div class="col-4">
+                    <img class="d-block w-100" style="border-radius:20px;" src="@villa.ImageURL" alt="First slide"></img>                    
+                </div>
+
+                <div class="col-8">
+                    <p class="card-title text-warning" style="font-size:xx-large">@villa.Name</p>
+                    <p class="card-text">
+                        @villa.Details
+                    </p>
+                </div>
+                <div class="col-12">
+                    <div class="row pb-3 pt-2">
+                        <div class="col-4">
+                            <a href="" class="btn btn-success form-control btn-block">Book</a>
+                        </div>
+                        <div class="col-4">
+                            <span class="">Max Occupancy: @villa.Occupancy adults</span>
+                            <br />
+                            <span class=" pt-1">Villa Size: @villa.SquareFoot</span>
+                        </div>
+                        <div class="col-4">
+                            <span class="text-warning float-end front-weight-bold pt-1" style="font-size:25px">
+                                лв.
+                                <span style="border-bottom:1px solid #ff6a00">
+                                    @villa.Rate.ToString("c")
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>        
+    }
 </div>
