--- a/Villa_WEB/Views/Shared/_Layout.cshtml
+++ b/Villa_WEB/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <div class="container">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Villa_WEB</a>
@@ -36,6 +37,7 @@
                 </div>
             </div>
         </nav>
+        </div>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
