Adding crud opration for Villa Number

--- a/Villa_WEB/Views/VillaNumber/IndexVillaNumber.cshtml
+++ b/Villa_WEB/Views/VillaNumber/IndexVillaNumber.cshtml
@@ -31,10 +31,10 @@
                     <td>@i.VillaNo</td>
 
                     <td>
-                        <a asp-controller="Villa" asp-route-villaNo="@i.VillaNo" asp-action="UpdateVilla" class="btn btn-outline-success">
+                        <a asp-controller="VillaNumber" asp-route-villaNo="@i.VillaNo" asp-action="UpdateVillaNumber" class="btn btn-outline-success">
                             <i class="bi bi-pencil-fill"></i>
                         </a>
-                        <a asp-controller="Villa" asp-route-villaNo="@i.VillaNo" asp-action="DeleteVilla" class=" btn btn-danger">
+                        <a asp-controller="VillaNumber" asp-route-villaNo="@i.VillaNo" asp-action="DeleteVillaNumber" class=" btn btn-danger">
                             <i class="bi bi-trash3-fill"></i>
                         </a>
                     </td>
