--- a/Villa_WEB/Views/Villa/CreateVilla.cshtml
+++ b/Villa_WEB/Views/Villa/CreateVilla.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Villa_WEB.Models.Dto.VillaCreateDTO
 
-<form asp-action="CreateVilla" asp-controller="Villa">
+<form asp-action="CreateVilla" asp-controller="Villa" enctype="multipart/form-data">
     <br/>
     <div class="container border p-3">
         <h1 class="text-primary">Create Villa</h1>
@@ -36,7 +36,8 @@
                 <label asp-for="ImageURL" class="control-label pt-2" style="font-size:20px"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="ImageURL" class="form-control" />
+                <input asp-for="Image" class="form-control"></input>
+                <input asp-for="ImageURL" hidden class="form-control" />
                 <span asp-validation-for="ImageURL" class="text-danger"></span>
             </div>
 
