--- a/Villa_WEB/Views/Villa/UpdateVilla.cshtml
+++ b/Villa_WEB/Views/Villa/UpdateVilla.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Villa_WEB.Models.Dto.VillaUpdateDTO
 
-<form asp-action="UpdateVilla" asp-controller="Villa">
+<form asp-action="UpdateVilla" asp-controller="Villa" enctype="multipart/form-data">
     <br />
     <div class="container border p-3">
         <h1 class="text-primary">Update Villa</h1>
@@ -40,8 +40,10 @@
                         <label asp-for="ImageURL" class="control-label pt-2" style="font-size:20px"></label>
                     </div>
                     <div class="col-10 pb-3">
-                        <input asp-for="ImageURL" class="form-control" />
-                        <span asp-validation-for="ImageURL" class="text-danger"></span>
+                        <input asp-for="Image"  class="form-control" />
+                        <input asp-for="ImageURL" hidden class="form-control" />
+                        <input asp-for="ImageLocalPath" hidden class="form-control" />
+                        <span asp-validation-for="Image" class="text-danger"></span>
                     </div>
 
                     <div class="col-2">
